--- a/Taller 1/index.html
+++ b/Taller 1/index.html
@@ -9,33 +9,35 @@
         <h1>Calculadora</h1>
     </header>
     <body>
-        <div>
-            <input type="submit" id="C" value="C">
-            <input type="text" name="result" id="result" readonly>
-        </div>
-        <div>
-            <input type="submit" id="7" value="7">
-            <input type="submit" id="8" value="8">
-            <input type="submit" id="9" value="9">
-            <input type="submit" id="X" value="X">
-        </div>
-        <div>
-            <input type="submit" id="4" value="4">
-            <input type="submit" id="5" value="5">
-            <input type="submit" id="6" value="6">
-            <input type="submit" id="/" value="/">
-        </div>
-        <div>
-            <input type="submit" id="1" value="1">
-            <input type="submit" id="2" value="2">
-            <input type="submit" id="3" value="3">
-            <input type="submit" id="+" value="+">
-        </div>
-        <div>
-            <input type="submit" id="." value=".">
-            <input type="submit" id="0" value="0">
-            <input type="submit" id="=" value="=">
-            <input type="submit" id="-" value="-">
-        </div>
+        <div id="gigante">
+            <div>
+                <input type="submit" id="C" value="C">
+                <input type="text" name="result" id="result" readonly>
+            </div>
+            <div>
+                <input type="submit" id="7" value="7">
+                <input type="submit" id="8" value="8">
+                <input type="submit" id="9" value="9">
+                <input type="submit" id="X" value="X">
+            </div>
+            <div>
+                <input type="submit" id="4" value="4">
+                <input type="submit" id="5" value="5">
+                <input type="submit" id="6" value="6">
+                <input type="submit" id="/" value="/">
+            </div>
+            <div>
+                <input type="submit" id="1" value="1">
+                <input type="submit" id="2" value="2">
+                <input type="submit" id="3" value="3">
+                <input type="submit" id="+" value="+">
+            </div>
+            <div>
+                <input type="submit" id="." value=".">
+                <input type="submit" id="0" value="0">
+                <input type="submit" id="=" value="=">
+                <input type="submit" id="-" value="-">
+            </div>
+    </div>
     </body>
 </html>
