--- a/Taller 1/index.html
+++ b/Taller 1/index.html
@@ -42,4 +42,7 @@
             </div>
     </div>
     </body>
+    <footer>
+        <h3>Bryan Alegria - Paz Muñoz - Fernando Vásquez</h3>
+    </footer>
 </html>
