--- a/Taller 1/index.html
+++ b/Taller 1/index.html
@@ -13,31 +13,35 @@
 </header>
 
 <body>
-    <input type="submit" id="C" value="C">
-    <input type="text" name="result" id="result" readonly>
-    <div class="grid-container">
-        <div>
-            <input class="grid-item" type="submit" id="7" value="7">
+    <div class="gigante">
+        <div class="container">
+            <div class="main-grid-container">
+                <input class="grid-item" type="submit" id="C" value="C">
+                <input class="grid-item" type="text" name="result" id="result" readonly>
+            </div>
+            <div class="grid-container">
+                <input class="grid-item" type="submit" id="7" value="7">
+                <input class="grid-item" type="submit" id="8" value="8">
+                <input class="grid-item" type="submit" id="9" value="9">
+                <input class="grid-item" type="submit" id="X" value="X">
+
+                <input class="grid-item" type="submit" id="4" value="4">
+                <input class="grid-item" type="submit" id="5" value="5">
+                <input class="grid-item" type="submit" id="6" value="6">
+                <input class="grid-item" type="submit" id="/" value="/">
+
+                <input class="grid-item" type="submit" id="1" value="1">
+                <input class="grid-item" type="submit" id="2" value="2">
+                <input class="grid-item" type="submit" id="3" value="3">
+                <input class="grid-item" type="submit" id="+" value="+">
+
+
+                <input class="grid-item" type="submit" id="." value=".">
+                <input class="grid-item" type="submit" id="0" value="0">
+                <input class="grid-item" type="submit" id="=" value="=">
+                <input class="grid-item" type="submit" id="-" value="-">
+            </div>
         </div>
-        <input class="grid-item" type="submit" id="8" value="8">
-        <input class="grid-item" type="submit" id="9" value="9">
-        <input class="grid-item" type="submit" id="X" value="X">
-
-        <input class="grid-item" type="submit" id="4" value="4">
-        <input class="grid-item" type="submit" id="5" value="5">
-        <input class="grid-item" type="submit" id="6" value="6">
-        <input class="grid-item" type="submit" id="/" value="/">
-
-        <input class="grid-item" type="submit" id="1" value="1">
-        <input class="grid-item" type="submit" id="2" value="2">
-        <input class="grid-item" type="submit" id="3" value="3">
-        <input class="grid-item" type="submit" id="+" value="+">
-
-
-        <input class="grid-item" type="submit" id="." value=".">
-        <input class="grid-item" type="submit" id="0" value="0">
-        <input class="grid-item" type="submit" id="=" value="=">
-        <input class="grid-item" type="submit" id="-" value="-">
     </div>
 </body>
 <footer>
